# django-vanilla-extensions

./: README.md  pyproject.toml
vanilla_ext/: __init__.py  advanced.py  formsets.py  views.py
