[tool.poetry]
name = "django-vanilla-extensions"
version = "0.1.0"
description = "The missing FormSets and ViewSets for django vanilla views."
authors = [
    "Asif Saif Uddin <github.com/auvipy>",
    "Tom Christie <github.com/tomchristie>"

]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/auvipy/django-vanilla-extensions"
repository = "https://github.com/auvipy/django-vanilla-extensions"
documentation = "https://github.com/auvipy/django-vanilla-extensions"

keywords = ["python", "django", "django-vanilla-views"]

# Requirements
[tool.poetry.dependencies]
python = "^3.4"
django = "^2.0.0"
django-vanilla-views = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
pytest-cov = "^2.5"
pytest-mock = "^1.9"
tox = "^3.0"
pytest-sugar = "^0.9.1"

[tool.poetry.scripts]
poetry = "poetry.console:main"
